fix legend spacing and tablet text click

--- a/src/page-sections/rd-in-contracting/spending/legend.module.scss
+++ b/src/page-sections/rd-in-contracting/spending/legend.module.scss
@@ -1,5 +1,4 @@
 .chart-legend {
-  margin: -30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -31,7 +30,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 6rem;
+  padding-left: 2rem;
 }
 
 /* mobile/phone */
